[package]
name = "future-parking_lot"
version = "0.3.0-alpha.2"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2018"
description = "An \"as simple as possible\" Future implementation for parking_lot"
license = "Apache-2.0/MIT"
repository = "https://github.com/nappa85/future-parking_lot"
readme = "README.md"
keywords = ["mutex", "rwlock", "future", "futures", "async"]
categories = ["concurrency", "asynchronous"]

[dependencies]
lock_api = "0.3"
parking_lot = "0.9"
crossbeam = "0.7"

[dev-dependencies]
lazy_static = "1.4"
tokio = "=0.2.0-alpha.2"
