[package]
name = "future-parking_lot"
version = "0.3.3"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2018"
description = "An \"as simple as possible\" Future implementation for parking_lot"
license = "Apache-2.0/MIT"
repository = "https://github.com/nappa85/future-parking_lot"
readme = "README.md"
keywords = ["mutex", "rwlock", "future", "futures", "async"]
categories = ["concurrency", "asynchronous"]

[dependencies]
lock_api = "0.4"
parking_lot = "0.11"
crossbeam-queue = "0.3"

[dev-dependencies]
lazy_static = "1.4"
tokio = "=0.2.0-alpha.6"
log = "0.4"
env_logger = "0.7"

[patch.crates-io]
crossbeam-queue = { git = "https://github.com/crossbeam-rs/crossbeam" }
